# MCC

./: .gitignore  CMakeLists.txt  README.md  mcc.cpp
mcc_headers/: ast.h  buildasm.h  buildasm2.h  general.h  lexer.h  parser.h
